--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,16 @@
 }
 
 #container {
-    width: 80%;
+    width: 95%;
 }
 
 #banner {
-    border : 1px solid black;
     display : flex;
-    height: 100px;
     align-items: center;
     justify-content: center;
-    font-size : 5vw;
+    font-size : 10vw;
     font-family: 'go_2_old_westernregular' ;
+    color : white;
 }
 
 #lake {
