--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,42 @@
 
 }
 
+body {
+    background-color: #EBEBEB;
+}
+
+.post {
+    border : 3px solid black;
+    margin-bottom: 25px;
+    padding: 10px;
+    box-shadow: 5px 9px 11px #737373;
+}
+
+#post_content {
+    border-top : 1px solid black;
+    border-bottom : 1px solid black;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+#post_date {
+    padding-top: 5px;
+    text-align: right;
+}
+
 #tinymce {
     width : 80%;
 }
 
-#container {
-    width: 95%;
+#main {
+    width: 100%;
+    display : flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#container{
+    width:80%;
 }
 
 #banner {
