--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,14 @@ body {
     background-color: #EBEBEB;
 }
 
+#container > h1 {
+    margin-top: 15px;
+    margin-bottom: 25px;
+}
+
 .post {
     border : 3px solid black;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
     padding: 10px;
     box-shadow: 5px 9px 11px #737373;
     background-color: white;
@@ -28,8 +33,16 @@ body {
 
 #post_date {
     padding-top: 5px;
-    text-align: right;
+    display : flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+a, a:link, a:visited, a:focus, a:hover,a:active  {
+    text-decoration: none;
+    color : black
+}
+
 
 #tinymce {
     width : 80%;
@@ -65,8 +78,46 @@ body {
 
 #comments {
     margin-top: 35px;
+    margin-bottom : 20px;
 }
 
 #comments_post {
     margin-bottom: 25px;
+
+}
+
+#comments_post > h2 {
+    margin-bottom: 15px;
+}
+
+textarea {
+    height : 100%;
+}
+
+#backto {
+    margin-top : 15px;
+    margin-bottom: 15px;
+}
+
+#comment{
+    border : 1px solid black;
+    margin-bottom: 20px;
+    padding : 10px;
+}
+
+#comment_content {
+    margin-top: 10px;
+}
+
+#comment_title{
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+button {
+    background-color: black;
+    border-color: black;
 }
