--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,52 @@ button {
 #comment_actions{
     text-align: right;
 }
+
+#post_form, #create_post_btn {
+    margin-top: 15px;
+}
+
+#confirm_dl_post,#confirm_dl_comment{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:100%;
+    background-color: rgba(0,0,0,76%);
+    display:none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#confirm_window{
+    width:50%;
+    height:50%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid white;
+    background-color: black;
+}
+
+.confirm-text{
+    text-align:center;
+    font-size: 2vw;
+    color: white
+}
+
+.confirm-buttons{
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+#post_button_admin{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 10%;
+}
