--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,8 @@ body {
     margin-bottom: 25px;
 }
 
-.post,.comment {
+.post,
+.comment {
     border: 3px solid black;
     margin-bottom: 30px;
     padding: 10px;
@@ -113,7 +114,7 @@ textarea {
 
 #comment_content {
     margin-top: 10px;
-    display : flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -177,41 +178,45 @@ button {
     margin-bottom: 20px;
 }
 
-#comment_data{
+#comment_data {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#comment_content{
-    font-size:1.5vw;
+#comment_content {
+    font-size: 1.5vw;
 }
 
-#comment_actions{
+#comment_actions {
     text-align: right;
 }
 
-#post_form, #create_post_btn, #update_post_btn, #update_comment_btn {
+#post_form,
+#create_post_btn,
+#update_post_btn,
+#update_comment_btn {
     margin-top: 15px;
 }
 
-#confirm_dl_post,#confirm_dl_comment{
+#confirm_dl_post,
+#confirm_dl_comment {
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 100%;
-    height:100%;
-    background-color: rgba(0,0,0,76%);
-    display:none;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 76%);
+    display: none;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-#confirm_window{
-    width:50%;
-    height:50%;
-    display:flex;
+#confirm_window {
+    width: 50%;
+    height: 50%;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -219,13 +224,13 @@ button {
     background-color: black;
 }
 
-.confirm-text{
-    text-align:center;
+.confirm-text {
+    text-align: center;
     font-size: 2vw;
     color: white
 }
 
-.confirm-buttons{
+.confirm-buttons {
     width: 30%;
     display: flex;
     flex-direction: row;
@@ -233,37 +238,38 @@ button {
     margin-top: 30px;
 }
 
-#post_button_admin{
+#post_button_admin {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 10%;
 }
 
-.post-delete,.comment-delete{
+.post-delete,
+.comment-delete {
     cursor: pointer;
 }
 
 #comment_text {
     width: 85%;
-    font-size:2vw;
+    font-size: 2vw;
 }
 
 #comment_actions {
-    width:5%;
+    width: 5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    font-size:1.5vw;
+    font-size: 1.5vw;
 
 }
 
-#author{
+#author {
     font-size: 4vw;
 }
 
-#notice{
+#notice {
     width: 100%;
     background-color: white;
     text-align: center;
@@ -273,26 +279,35 @@ button {
     justify-content: space-between;
     padding-left: 10px;
     padding-right: 10px;
-    align-items:center;
+    align-items: center;
     font-size: 2vw;
     margin-top: 5px;
 }
 
-#notice_text{
+#notice_text {
     font-size: 1.5vw;
     font-weight: bold;
 }
 
-#notice_close{
+#notice_close {
     cursor: pointer;
 }
 
 
-#banner_admin-title{
+#banner_admin-title {
     margin-top: 10px;
     width: 70%;
     text-align: center;
     border: 3px solid black;
     box-shadow: 5px 9px 11px #737373;
     background: white;
+}
+
+.confirm-buttons>.btn-confirm {
+    border: 2px solid white;
+    font-size: 1.5vw;
+}
+
+#actionLink {
+    color: white;
 }
