--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #EBEBEB;
 }
 
-#container>h1 {
+#container>h3 {
     margin-top: 15px;
     margin-bottom: 25px;
 }
@@ -25,14 +25,14 @@ body {
     background-color: white;
 }
 
-#post_content {
+.post_content {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-#post_date {
+.post_date {
     padding-top: 5px;
     display: flex;
     flex-direction: row;
@@ -57,8 +57,9 @@ a:active {
 #main {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 #container {
@@ -79,7 +80,6 @@ a:active {
     max-width: 100%;
     position: absolute;
     left: 0;
-    top: 0;
     z-index: -1;
 }
 
@@ -310,4 +310,113 @@ button {
 
 #actionLink {
     color: white;
+}
+
+#menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 75px;
+    width: 100%;
+    border: 2px solid black;
+    background: snow;
+    padding-left: 11%;
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+#menu-story,
+#menu-author {
+    width: 15%;
+}
+
+
+#author-title {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 4vw;
+}
+
+#author-photo {
+    width: 30%;
+}
+
+#author_img {
+    max-width: 100%;
+    max-height: auto;
+    margin-right: 25px;
+    margin-bottom: 25px;
+    float: left;
+    border : 3px solid black;
+    box-shadow: 5px 9px 11px #737373;
+}
+
+#author-biography {
+    font-size: 1.5vw;
+}
+
+.biography-title {
+    font-weight: bold;
+    font-size: 2vw;
+}
+
+#concept{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+footer{
+    width:100%;
+    border-top:3px solid black;
+    display : flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    padding-top: 10px;
+    background: snow;
+}
+
+#bar{
+    width: 100%;
+    border-top: 3px solid black;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.footer-title{
+    font-size:1.5vw;
+    font-weight: bold;
+
+}
+
+#footer_link-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#footer_link, #footer_reservation, #footer_author{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+ul{
+    list-style-type: none;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#footer_author-button{
+    font-size: 3vw;
+}
+
+#bars_button{
+    display:none;
 }
