Mobile version ok

--- a/public/css/style_mobile.css
+++ b/public/css/style_mobile.css
@@ -14,6 +14,7 @@
     color: snow;
     background: rgba(255,255,255,0.4);
     font-size: 25px;
+    z-index : 5;
 }
 
 footer{
@@ -62,4 +63,32 @@ ul{
 
 #footer_author-button {
     font-size: 7vw;
+}
+
+#author-title {
+    font-size: 7vw;
+}
+
+#author-biography > p {
+    font-size: 2vw;
+}
+
+.biography-title {
+    font-size: 3vw;
+}
+
+#comments_link {
+    display : none;
+}
+
+#comment_content {
+    font-size: 3vw;
+}
+
+#comment_title {
+    font-size: 3vw;
+}
+
+#notice_text {
+    font-size: 3vw;
 }
